# hsn-api

./: .env  .gitignore  .gitingore  .gitmodules  alembic.ini  docker-compose.yml  downgrade_test_db.sh  main.py  prometheus.yml  pyproject.toml  pytest.ini  upgrade_test_db.sh
.docker/admin/: .dockerignore  Dockerfile
.docker/api/: Dockerfile
.github/workflows/: black.yml  check.yml
.nginx/: Dockerfile  nginx.conf
api/: api_server.py
api/decorators/: __init__.py  admin.py  handle_exceptions.py
api/dependencies/: __init__.py  logging.py  permission.py
api/exceptions/: __init__.py  base.py
api/middlewares/: __init__.py  auth.py  sqlalchemy.py
api/routes/: __init__.py
core/hsn/: __init__.py
core/on_startup/: __init__.py  create_admin.py  create_med_prescriptions.py  create_role_doctor.py
core/user/: __init__.py  model.py  schemas.py
infra/: __init__.py  config.py
migrations/: env.py
migrations/versions/: 1b55cbe4aa9c_init_tables.py  20240223_1347_base.py  20240223_1347_med_organizations.py  20240223_1347_roles.py  20240223_1359_users.py  20240223_1412_user_roles.py  20240223_1423_cabinets.py  20240223_1438_diagnoses_catalog.py  20240223_1445_doctors.py  20240224_1037_contragents.py  20240224_1037_medicines_group.py  20240224_1141_patients.py  20240226_0740_patient_appointments.py  20240226_0744_analises.py  20240226_0746_medicine_prescriptions.py  20240226_0747_researchs.py  (+40 more)
pgadmin/: pgadmin4.db
tests/: conftest.py
tg_api/: __init__.py  tg_api.py
utils/: __init__.py  hash_helper.py  hasher.py  jwt_helper.py  password_helper.py
(+646 files in other folders)
