[tool.poetry]
name = "hsn_system"
version = "0.1.0"
description = ""
authors = ["kirill <kirya9981@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.27.0.post1"
pydantic-settings = "^2.1.0"
fastapi = "^0.109.0"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
pyjwt = "^2.8.0"
loguru = "^0.7.2"
gunicorn = "^21.2.0"
fastapi-admin = "^1.0.4"
cryptography = "^42.0.3"
fastapi-cache2 = { extras = ["redis"], version = "^0.2.1" }
httpx = "^0.27.0"
pytest-asyncio = "^0.23.6"
pytest = "^8.0.0"
starlette-admin = "^0.13.2"
faker = "^25.2.0"
psycopg2 = "^2.9.9"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
SQLAlchemy = "^2.0.25"
pydantic = "^2.6.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    ".", "src"
]
asyncio_mode = "auto"

